Simulation improvements