@@ -11,8 +11,6 @@ import com.revrobotics.spark.SparkMax;
 import com.revrobotics.spark.config.SparkBaseConfig.IdleMode;
 import com.revrobotics.spark.config.SparkMaxConfig;
 import edu.wpi.first.math.geometry.Pose2d;
-import edu.wpi.first.math.geometry.Pose3d;
-import edu.wpi.first.math.geometry.Rotation3d;
 import edu.wpi.first.math.geometry.Translation3d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
 import edu.wpi.first.math.numbers.N1;
@@ -20,16 +18,27 @@ import edu.wpi.first.math.numbers.N2;
 import edu.wpi.first.math.system.LinearSystem;
 import edu.wpi.first.math.system.plant.DCMotor;
 import edu.wpi.first.math.system.plant.LinearSystemId;
+import edu.wpi.first.math.util.Units;
+import edu.wpi.first.networktables.NetworkTableInstance;
+import edu.wpi.first.networktables.StructArrayPublisher;
+import edu.wpi.first.util.CircularBuffer;
+import edu.wpi.first.wpilibj.RobotController;
 import edu.wpi.first.wpilibj.simulation.FlywheelSim;
+import edu.wpi.first.wpilibj.simulation.RoboRioSim;
 import edu.wpi.first.wpilibj.simulation.SingleJointedArmSim;
 import frc.robot.Constants;
-import java.util.ArrayList;
+import java.util.Arrays;
 import org.littletonrobotics.junction.Logger;
 
 public class LauncherIOSim implements LauncherIO {
   private FlywheelSim flywheelSim;
-  private ArrayList<ArrayList<Pose3d>> fuelTrajectory = new ArrayList<>(30);
-  private Pose2d robotPose;
+  private StructArrayPublisher<Translation3d> fuelPublisher;
+  private CircularBuffer<Translation3d[]> fuelTrajectory = new CircularBuffer<>(30);
+  private CircularBuffer<Integer> trajectoryAge = new CircularBuffer<>(30);
+  private Translation3d[] theTrajectories = new Translation3d[30 * 30];
+  private int ageValue = 0;
+  private final int maxTrajectoryAge = 2 * 50; // 2 seconds
+  private Pose2d robotPose = new Pose2d();
   private ChassisSpeeds robotVelocity;
 
   // MOI calculated from prototype launcher
@@ -64,10 +73,10 @@ public class LauncherIOSim implements LauncherIO {
   private static final double kTurretGearing = 50; // Total guess at the gearing for motor to turret
   private SparkMax m_turretSparkMax =
       new SparkMax(Constants.launcherConstants.launchMotorCanId, MotorType.kBrushless);
-  private SparkMaxConfig m_turretConfig = new SparkMaxConfig();
-  private SparkMaxSim m_turretSparkMaxSim = new SparkMaxSim(m_turretSparkMax, DCMotor.getNEO(1));
   private final SparkClosedLoopController turretClosedLoopController;
+  private SparkMaxConfig m_turretConfig = new SparkMaxConfig();
 
+  private SparkMaxSim m_turretSparkMaxSim = new SparkMaxSim(m_turretSparkMax, DCMotor.getNEO(1));
   private final LinearSystem<N2, N1, N2> m_turretPlant =
       LinearSystemId.createSingleJointedArmSystem(
           DCMotor.getNEO(1), kTurretMomentOfInertia, kTurretGearing);
@@ -79,7 +88,7 @@ public class LauncherIOSim implements LauncherIO {
     m_turretConfig
         .closedLoop
         .feedbackSensor(FeedbackSensor.kPrimaryEncoder)
-        .pid(0.1, 0, 0)
+        .pid(0.2, 0, 0)
         .outputRange(-1, 1);
 
     m_turretSparkMax.configure(
@@ -96,6 +105,11 @@ public class LauncherIOSim implements LauncherIO {
             3 * Math.PI / 4,
             false,
             0.0);
+
+    fuelPublisher =
+        NetworkTableInstance.getDefault()
+            .getStructArrayTopic("/AdvantageKit/Launcher/Fuels", Translation3d.struct)
+            .publish();
   }
 
   @Override
@@ -103,7 +117,12 @@ public class LauncherIOSim implements LauncherIO {
     // Update the sim model based on most recent commands. The standard loop time is 20ms.
     flywheelSim.update(0.020);
 
+    turretSim.setInput(m_turretSparkMaxSim.getAppliedOutput() * RoboRioSim.getVInVoltage());
     turretSim.update(0.020);
+    m_turretSparkMaxSim.iterate(
+        Units.radiansPerSecondToRotationsPerMinute(turretSim.getVelocityRadPerSec()),
+        RobotController.getBatteryVoltage(),
+        0.020);
 
     // Compensate for a piece of fuel if required
     if (isFuel) {
@@ -133,10 +152,10 @@ public class LauncherIOSim implements LauncherIO {
       double xVelocityProjectile = horizontalVelocity * Math.cos(launchAzimuthRad);
       double yVelocityProjectile = horizontalVelocity * Math.sin(launchAzimuthRad);
 
-      ArrayList<Pose3d> shot = new ArrayList<>(30);
+      Translation3d[] shot = new Translation3d[30];
       for (int i = 0; i < 30; i++) {
         // Generate 3 seconds worth of trajectory info at 10Hz
-        double time = (double) i * 0.1;
+        double time = (double) i * 2.0 / 30.0;
 
         double pointX =
             robotPose.getX() + robotVelocity.vxMetersPerSecond + xVelocityProjectile * time;
@@ -146,9 +165,13 @@ public class LauncherIOSim implements LauncherIO {
             Constants.launcherConstants.launcherHeight
                 + verticalVelocity * time
                 - 9.81 * time * time;
-        shot.add(new Pose3d(new Translation3d(pointX, pointY, pointZ), new Rotation3d()));
+        shot[i] = (new Translation3d(pointX, pointY, pointZ));
       }
-      fuelTrajectory.add(shot);
+
+      if (fuelTrajectory.size() < 30) {
+        fuelTrajectory.addLast(shot);
+        trajectoryAge.addLast(ageValue);
+      }
     }
 
     inputs.rpm = flywheelSim.getAngularVelocityRPM();
@@ -158,8 +181,45 @@ public class LauncherIOSim implements LauncherIO {
     inputs.turretAngle = Math.toDegrees(turretSim.getAngleRads());
     inputs.turretSpeed = Math.toDegrees(turretSim.getVelocityRadPerSec());
 
-    if (!fuelTrajectory.isEmpty() && !fuelTrajectory.get(0).isEmpty()) {
-      Logger.recordOutput("Launcher/trajectories/trajectory1", fuelTrajectory.get(0).get(0));
+    inputs.turretBusVoltage = m_turretSparkMaxSim.getAppliedOutput() * RoboRioSim.getVInVoltage();
+    inputs.turretCurrent = m_turretSparkMaxSim.getMotorCurrent();
+    inputs.turretOutput = m_turretSparkMaxSim.getAppliedOutput();
+
+    // Handle old trajectories
+    for (int i = 0; i < 30; i++) {
+      if (trajectoryAge.size() > 0) {
+        if (ageValue - trajectoryAge.getFirst().intValue() > maxTrajectoryAge) {
+          trajectoryAge.removeFirst();
+          fuelTrajectory.removeFirst();
+        } else {
+          // Stop iterating
+          break;
+        }
+      }
+    }
+    ageValue++;
+
+    // Iterate through the ring buffer, pulling from the front, placing at the end, until all
+    // trajectories are plotted
+    Translation3d[] traj = new Translation3d[0];
+    int age;
+    for (int i = 0; i < fuelTrajectory.size(); i++) {
+
+      traj = fuelTrajectory.removeFirst();
+      age = trajectoryAge.removeFirst();
+
+      System.arraycopy(traj, 0, theTrajectories, i * 30, 30);
+
+      fuelTrajectory.addLast(traj);
+      trajectoryAge.addLast(age);
+    }
+
+    Translation3d[] loggedTrajectories = Arrays.copyOf(theTrajectories, fuelTrajectory.size() * 30);
+    fuelPublisher.set(loggedTrajectories);
+
+    if (fuelTrajectory.size() == 0) {
+      traj = new Translation3d[0];
+      fuelPublisher.set(traj);
     }
   }
 
@@ -188,7 +248,29 @@ public class LauncherIOSim implements LauncherIO {
 
   @Override
   public void pointAt(double angle) {
-    turretClosedLoopController.setSetpoint(Math.toRadians(angle), ControlType.kPosition);
+    // Compute the offset of the turret controller based on angle input referenced from
+    //   0 = north (positive Y)
+    //   + = counter-clockwise
+    // Angle is given in degrees
+
+    // Robot pose is in radians, 0 == intake pointing west, + = counter clockwise
+    //  The robot pose is the angle of the intake
+
+    // Setpoint into radians relative to robot pose
+    double setpoint = (angle - 90.0) - robotPose.getRotation().getDegrees();
+    Logger.recordOutput("Launcher/turretSetpointDegPre", setpoint);
+    setpoint = setpoint % 360;
+    if (setpoint < 0) {
+      setpoint += 360;
+    }
+    if (setpoint > 180) {
+      setpoint = setpoint - 360;
+    }
+
+    Logger.recordOutput("Launcher/turretSetpointDeg", Units.radiansToDegrees(setpoint));
+
+    // Turret closed loop controller is in radians around zero being over the intake
+    turretClosedLoopController.setSetpoint(setpoint, ControlType.kPosition);
   }
 
   @Override
